adding quality to item and changing business rule
